feat: remove /claim endpoint
